mlflow/install/minio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow-minio
spec:
  selector:
    matchLabels:
      app: mlflow-minio
  template:
    metadata:
      labels:
        app: mlflow-minio
    spec:
      # 아래에서 만들어 둔 pvc를 볼륨으로 적용
      volumes:
      - name: mlflow-pvc
        persistentVolumeClaim:
          claimName: mlflow-pvc
      containers:
      - name: mlflow-minio
        # 사용할 컨테이너 이미지
        image: minio/minio:RELEASE.2020-07-27T18-37-02Z 
        imagePullPolicy: IfNotPresent #Always
        args:
        - server
        - /data
        # /data를 볼륨에 마운트
        volumeMounts:
        - name: mlflow-pvc
          mountPath: '/data'
        # minio에 접속하기 위한 키 값
        ports:
        - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: mlflow-minio
spec:
  type: LoadBalancer
  ports:
  - port: 9000
    targetPort: 9000
    protocol: TCP
    name: http
  selector:
    app: mlflow-minio
