mlflow/install/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kf-ingress
spec:
  rules:
  - http:
      paths:
      - path: /minio
        backend:
          serviceName: minio-service
          servicePort: 9000
